@@ -1,11 +1,22 @@
 Description: use usr/share/ipython/notebook by default for the static data
  provided by ipython-notebook-common
+ also add DEFAULT_STATIC_FILES_PATH as in version 1.0 so nbconvert works
+ with the packaged version (see ipython/nbconvert #97)
 Author: Julian Taylor <jtaylor.debian@googlemail.com>
 Forwarded: not-needed
 
 --- a/IPython/frontend/html/notebook/notebookapp.py
 +++ b/IPython/frontend/html/notebook/notebookapp.py
-@@ -157,7 +157,7 @@ class NotebookWebApplication(web.Applica
+@@ -89,6 +89,8 @@ ipython notebook --certfile=mycert.pem #
+ ipython notebook --port=5555 --ip=*    # Listen on port 5555, all interfaces
+ """
+ 
++DEFAULT_STATIC_FILES_PATH = "/usr/share/ipython/notebook/static"
++
+ #-----------------------------------------------------------------------------
+ # Helper functions
+ #-----------------------------------------------------------------------------
+@@ -157,7 +159,7 @@ class NotebookWebApplication(web.Applica
          
          settings = dict(
              template_path=os.path.join(os.path.dirname(__file__), "templates"),
@@ -14,7 +25,7 @@ Forwarded: not-needed
              cookie_secret=os.urandom(1024),
              login_url="%s/login"%(base_project_url.rstrip('/')),
          )
-@@ -366,7 +366,7 @@ class NotebookApp(BaseIPythonApplication
+@@ -366,7 +368,7 @@ class NotebookApp(BaseIPythonApplication
      def _mathjax_url_default(self):
          if not self.enable_mathjax:
              return u''
